  (Nick Barnes, review by Gabriel Scherer, Guillaume Munch-Maccagnoni, and
  Vincent Laviron)

### Other libraries:

### Tools:

- #12904: Run the testsuite with ThreadSanitizer on a PR when label
  `run-thread-sanitizer` is added
  (Olivier Nicole, suggested by Sébastien Hinderer and David Allsopp, review by
   Gabriel Scherer)

### Toplevel:

- #12891: Improved styling for initial prompt
  (Florian Angeletti, review by Gabriel Scherer)

- #13053: Improved display of builtin types such as `_ list` when aliased.
  (Samuel Vivien, review by Florian Angeletti)

### Manual and documentation:

- #12868: Manual: simplify style colours of the post-processed manual and API
  HTML pages, and fix the search button icon
  (Yawar Amin, review by Simon Grondin, Gabriel Scherer, and Florian Angeletti)

- #12949: document OCaml release cycles and version strings in
   `release-info/introduction.md`.
  (Florian Angeletti, review by Fabrice Buoro, Kate Deplaix, Damien Doligez, and
   Gabriel Scherer)

- #12976: Manual: use webman/<version>/*.html and
  webman/<version>/api/ for OCaml.org HTML manual generation
  (Shakthi Kannan, review by Hannes Mehnert, and Florian Angeletti)

- #13045: Emphasize caution about behaviour of custom block finalizers.
  (Nick Barnes)

- #13078: update Format tutorial on structural boxes to mention alignment
  questions.
  (Edwin Török, review by Florian Angeletti)

### Compiler user-interface and warnings:

* #12084: Check link order when creating archive and when using ocamlopt
  (Hugo Heuzard, review by Stefan Muenzel and Sébastien Hinderer)

- #12980: Explain type mismatch involving first-class modules by including
  the module level error message
  (Florian Angeletti, review by Vincent Laviron)

- #12985, #12988: Better error messages for partially applied functors.
  (Florian Angeletti, report by Arthur Wendling, review by Gabriel Scherer)

- #13051: Add a "Syntax error" to error messages for invalid package signatures.